tests/baselines/reference/parserStrictMode11.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode11.ts(2,20): error TS1100: Invalid use of 'eval' in strict mode.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode11.ts (1 errors) ====
    "use strict";
    var v = function f(eval) {
                       ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    };